Fix minor styles on mobile

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,6 @@ li.not-active a{color:inherit}
 /* ACTIVITIES */
 #activities .cards{display:flex;flex-direction:column}
 .single .card,article#activities .cards .double{height:100%;display:flex;flex-direction:column}
-article#activities .double{gap:1.5rem}
 /* FOOTER */
 .footer{background:#f2f2f2;display:flex;flex-direction:column;padding:1.75rem}
 .links{flex-grow:1}
@@ -78,6 +77,7 @@ article#activities .double{gap:1.5rem}
   .footer>div:not(:last-of-type){padding-bottom:2rem}
   .card{margin:0 0 1rem 0!important}
   article#activities,.logo-cont,#search{padding:0 1.75rem}
+  article#activities{padding-bottom:1.75rem}
   .cards.side>div:not(:last-of-type){margin-bottom:1.75rem}
 }
 /* Medium and up */
@@ -101,6 +101,7 @@ article#activities .double{gap:1.5rem}
   article#accommodations .main-content>.title,article#activities>.title{padding-bottom:.875rem}
   #accommodations .cards.side{gap:1.5rem}
   .logo-cont{padding:0}
+  article#activities .double{gap:1.5rem}
 }
 /* Medium only */
 @media screen and (min-width: 40em) and (max-width: 63.9375em) {
